--- a/index.html
+++ b/index.html
@@ -375,44 +375,50 @@
         const guitarBaseStrings = [4, 9, 2, 7, 11, 4];
 
         // Standard Guitar Chords
-// Standard Guitar Chords (Extended with m7)
+ // Standard Guitar Chords (Fixed: Added m7b5 for Diminished chords)
         const guitarChordLibrary = {
             // C
             "C": [-1, 3, 2, 0, 1, 0], "Cm": [-1, 3, 5, 5, 4, 3], "Cmaj7": [-1, 3, 2, 0, 0, 0], "C7": [-1, 3, 2, 3, 1, 0],
-            "Cm7": [-1, 3, 5, 3, 4, 3], // Barre 3
+            "Cm7": [-1, 3, 5, 3, 4, 3], "Cm7b5": [-1, 3, 4, 3, 4, -1],
             // Db / C#
             "Db": [-1, 4, 6, 6, 6, 4], "Dbm": [-1, 4, 6, 6, 5, 4], "Dbmaj7": [-1, 4, 6, 5, 6, 4], "Db7": [-1, 4, 6, 4, 6, 4],
-            "Dbm7": [-1, 4, 6, 4, 5, 4], "C#m7": [-1, 4, 6, 4, 5, 4],
+            "Dbm7": [-1, 4, 6, 4, 5, 4], "C#m7": [-1, 4, 6, 4, 5, 4], 
+            "Dbm7b5": [-1, 4, 5, 4, 5, -1], "C#m7b5": [-1, 4, 5, 4, 5, -1],
             // D
             "D": [-1, -1, 0, 2, 3, 2], "Dm": [-1, -1, 0, 2, 3, 1], "Dmaj7": [-1, -1, 0, 2, 2, 2], "D7": [-1, -1, 0, 2, 1, 2],
-            "Dm7": [-1, -1, 0, 2, 1, 1], 
+            "Dm7": [-1, -1, 0, 2, 1, 1], "Dm7b5": [-1, -1, 0, 1, 1, 1],
             // Eb / D#
             "Eb": [-1, 6, 8, 8, 8, 6], "Ebm": [-1, 6, 8, 8, 7, 6], "Ebmaj7": [-1, 6, 8, 7, 8, 6], "Eb7": [-1, 6, 8, 6, 8, 6],
             "Ebm7": [-1, 6, 8, 6, 7, 6], "D#m7": [-1, 6, 8, 6, 7, 6],
+            "Ebm7b5": [-1, 6, 7, 6, 7, -1], "D#m7b5": [-1, 6, 7, 6, 7, -1],
             // E
             "E": [0, 2, 2, 1, 0, 0], "Em": [0, 2, 2, 0, 0, 0], "Emaj7": [0, 2, 1, 1, 0, 0], "E7": [0, 2, 0, 1, 0, 0],
-            "Em7": [0, 2, 2, 0, 3, 0], 
+            "Em7": [0, 2, 2, 0, 3, 0], "Em7b5": [0, 1, 2, 0, 3, 0],
             // F
             "F": [1, 3, 3, 2, 1, 1], "Fm": [1, 3, 3, 1, 1, 1], "Fmaj7": [-1, -1, 3, 2, 1, 0], "F7": [1, 3, 1, 2, 1, 1],
-            "Fm7": [1, 3, 1, 1, 1, 1],
+            "Fm7": [1, 3, 1, 1, 1, 1], "Fm7b5": [1, -1, 1, 1, 0, -1], // Thumb style or simplified
             // Gb / F#
             "Gb": [2, 4, 4, 3, 2, 2], "Gbm": [2, 4, 4, 2, 2, 2], "Gbmaj7": [2, -1, 3, 3, 2, -1], "Gb7": [2, 4, 2, 3, 2, 2],
             "Gbm7": [2, 4, 2, 2, 2, 2], "F#m7": [2, 4, 2, 2, 2, 2],
+            "Gbm7b5": [2, -1, 2, 2, 1, -1], "F#m7b5": [2, -1, 2, 2, 1, -1],
             // G
             "G": [3, 2, 0, 0, 0, 3], "Gm": [3, 5, 5, 3, 3, 3], "Gmaj7": [3, 2, 0, 0, 0, 2], "G7": [3, 2, 0, 0, 0, 1],
-            "Gm7": [3, 5, 3, 3, 3, 3],
+            "Gm7": [3, 5, 3, 3, 3, 3], "Gm7b5": [3, -1, 3, 3, 2, -1],
             // Ab / G#
             "Ab": [4, 6, 6, 5, 4, 4], "Abm": [4, 6, 6, 4, 4, 4], "Abmaj7": [4, -1, 5, 5, 4, -1], "Ab7": [4, 6, 4, 5, 4, 4],
             "Abm7": [4, 6, 4, 4, 4, 4], "G#m7": [4, 6, 4, 4, 4, 4],
+            "Abm7b5": [4, -1, 4, 4, 3, -1], "G#m7b5": [4, -1, 4, 4, 3, -1],
             // A
             "A": [-1, 0, 2, 2, 2, 0], "Am": [-1, 0, 2, 2, 1, 0], "Amaj7": [-1, 0, 2, 1, 2, 0], "A7": [-1, 0, 2, 0, 2, 0],
-            "Am7": [-1, 0, 2, 0, 1, 0],
+            "Am7": [-1, 0, 2, 0, 1, 0], "Am7b5": [-1, 0, 1, 0, 1, -1],
             // Bb / A#
             "Bb": [-1, 1, 3, 3, 3, 1], "Bbm": [-1, 1, 3, 3, 2, 1], "Bbmaj7": [-1, 1, 3, 2, 3, 1], "Bb7": [-1, 1, 3, 1, 3, 1],
             "Bbm7": [-1, 1, 3, 1, 2, 1], "A#m7": [-1, 1, 3, 1, 2, 1],
+            "Bbm7b5": [-1, 1, 2, 1, 2, -1], "A#m7b5": [-1, 1, 2, 1, 2, -1],
             // H / B
             "H": [-1, 2, 4, 4, 4, 2], "Hm": [-1, 2, 4, 4, 3, 2], "Hmaj7": [-1, 2, 4, 3, 4, 2], "H7": [-1, 2, 1, 2, 0, 2],
-            "Hm7": [-1, 2, 4, 2, 3, 2], "Bm7": [-1, 2, 4, 2, 3, 2] // Bm7 often used for H
+            "Hm7": [-1, 2, 4, 2, 3, 2], "Bm7": [-1, 2, 4, 2, 3, 2],
+            "Hm7b5": [-1, 2, 3, 2, 3, -1], "Bm7b5": [-1, 2, 3, 2, 3, -1]
         };
 
         const colorsMajor = { tonic: "#C1E1C1", subdom: "#FDFD96", dom: "#FFB7B2", minor: "#B5EAD7", dim: "#D3D3D3" };
@@ -1153,11 +1159,11 @@ const probabilityMap = {
                 if (chordLabelSuffix === "Moll") {
                     libSuffix = "m"; // Pop Moll -> m
                 } else if (chordLabelSuffix === "m7") {
-                    libSuffix = "m7"; // Jazz m7 -> m7 (jetzt in Library!)
+                    libSuffix = "m7"; // Jazz m7
                 } else if (chordLabelSuffix === "Verm." || chordLabelSuffix === "m7b5") {
-                    libSuffix = "m"; // Fallback für Dim (oder m7b5 falls nicht in Lib)
+                    libSuffix = "m7b5"; // FIX: Nutze jetzt echte halbverminderte Akkorde!
                 } else if (chordLabelSuffix === "7(b9)") {
-                    libSuffix = "7"; // FIX: 7(b9) -> 7 (Dominantseptakkord statt Dur!)
+                    libSuffix = "7"; // Fallback auf 7
                 } else if (chordLabelSuffix.includes("7")) {
                     libSuffix = chordLabelSuffix; // maj7, 7 etc.
                 }
@@ -1173,9 +1179,14 @@ const probabilityMap = {
                     pattern = guitarChordLibrary[altKey];
                 }
                 
-                // Fallback: Wenn m7 fehlt, nimm m. Wenn 7 fehlt, nimm Dur.
+                // Fallback: Wenn m7b5 fehlt, nimm m.
                 if (!pattern) {
-                    if (libSuffix.includes("m")) pattern = guitarChordLibrary[absRootName+"m"];
+                    // Falls wir m7b5 wollten, aber nicht gefunden haben -> Fallback auf m
+                    if (libSuffix === "m7b5") {
+                         // Versuch mit 'm' (besser als nichts, aber sollte dank neuer Lib nicht passieren)
+                         pattern = guitarChordLibrary[absRootName+"m"];
+                    }
+                    else if (libSuffix.includes("m")) pattern = guitarChordLibrary[absRootName+"m"];
                     else pattern = guitarChordLibrary[absRootName];
                 }
                 if (!pattern) pattern = [-1,-1,-1,-1,-1,-1];
